--- a/index.html
+++ b/index.html
@@ -6,175 +6,198 @@
 <title>रामिलाका लागि ❤️</title>
 
 <style>
+
+.reveal-photo{
+    width:90px;
+    height:120px;
+    object-fit:cover;
+    border-radius:15px;
+    filter: blur(8px);
+    transition: filter 1.5s ease;
+}
+
+.reveal-photo.show{
+    filter: blur(0);
+}
+
 body{
     margin:0;
-    background: radial-gradient(circle at top, #ff6f91, #ff9671);
+    background: linear-gradient(135deg,#ff758c,#ff7eb3);
     font-family: Arial, sans-serif;
     text-align:center;
     color:white;
     padding:20px;
-    overflow-x:hidden;
 }
 h1{font-size:2.2em}
-.heart{
-    font-size:55px;
-    margin:10px;
-    cursor:pointer;
-    animation:float 1.5s infinite alternate;
-}
-#proposal,#final{
-    display:none;
+.card{
     background:white;
     color:#333;
     padding:25px;
     border-radius:20px;
-    margin-top:30px;
-    animation:pop .8s;
+    margin-top:25px;
 }
-button{
-    padding:12px 22px;
+.heart{
+    font-size:55px;
     margin:10px;
+    cursor:pointer;
+}
+.hidden{display:none}
+button{
+    padding:12px 25px;
     border:none;
     border-radius:25px;
     font-size:16px;
     cursor:pointer;
+    margin:10px;
 }
 .yes{background:#ff4d6d;color:white}
-.smile{background:#ffd166}
-.whatsapp{background:#25D366;color:white}
-.photo{
-    width:100%;
-    max-width:300px;
-    border-radius:15px;
-    margin:15px auto;
-    display:block;
+.no{
+    background:#ddd;
+    position:absolute;
 }
-@keyframes float{to{transform:translateY(-12px)}}
-@keyframes pop{from{transform:scale(0)}to{transform:scale(1)}}
-.confetti{
-    position:fixed;
-    top:-10px;
-    font-size:20px;
-    animation:fall linear forwards;
+#catch{
+    font-size:60px;
+    position:absolute;
+    cursor:pointer;
 }
-@keyframes fall{to{transform:translateY(110vh);opacity:0}}
 </style>
 </head>
 
 <body>
 
 <h1>❤️ रामिला, एउटा सानो खेल ❤️</h1>
-<p>५ वटा मुटु ट्याप गर 😊</p>
-<p><small>(पहिलो ट्यापसँगै संगीत सुरु हुन्छ)</small></p>
+<p>पहिले सबै मुटु ट्याप गर 😄</p>
 
-<div id="game">
-    <span class="heart">❤️</span>
-    <span class="heart">❤️</span>
+<!-- MUSIC -->
+<div class="card">
+    <p>🎵 खेल खेल्दा गीत सुन्न चाहनुहुन्छ?</p>
+    <iframe width="100%" height="80"
+        src="https://www.youtube.com/embed/m5nazfNU6hc?enablejsapi=1"
+        frameborder="0"
+        allow="autoplay; encrypted-media">
+    </iframe>
+    <small>(Play ▶️ थिचेपछि खेल सुरु गर)</small>
+</div>
+
+<!-- GAME 1 -->
+<div id="game1">
     <span class="heart">❤️</span>
     <span class="heart">❤️</span>
     <span class="heart">❤️</span>
 </div>
 
-<div id="proposal">
-    <h2>प्रिय रामिला ❤️</h2>
-
-    <!-- Optional Photo (replace src if you want) -->
-    <img class="photo" src="https://via.placeholder.com/300x200?text=Ramila+❤️" alt="Ramila">
-
-    <p id="typeText"></p>
-
-    <button class="yes" onclick="yesClicked()">हो 😊</button>
-    <button class="smile" onclick="smileClicked()">पहिले मुस्कान 😄</button>
+<!-- GAME 2 -->
+<div id="game2" class="hidden">
+    <div class="card">
+        <h2>😄 यो मुटु समात!</h2>
+        <p>(एकचोटि मात्र)</p>
+    </div>
+    <div id="catch">❤️</div>
 </div>
 
-<div id="final">
-    <h2>❤️ धन्यवाद रामिला ❤️</h2>
+<!-- QUIZ -->
+<div id="quiz" class="hidden card">
+    <h2>😜 सानो प्रश्न</h2>
+    <p>रामिलाको मुस्कान कस्तो हुन्छ?</p>
+    <button onclick="wrong()">सामान्य 🙂</button>
+    <button onclick="wrong()">ठीकठाक 😐</button>
+    <button onclick="right()">अत्यन्तै खतरनाक 😍</button>
+</div>
+
+<!-- FINAL -->
+<div id="final" class="hidden card">
+    <h2>रामिला ❤️</h2>
+
+    <!-- PHOTO GALLERY -->
+    <div style="display:flex;justify-content:center;flex-wrap:wrap;gap:10px;margin-bottom:15px;">
+        <img class="reveal-photo" src="a23e33dc-8a6f-4515-863b-23cd76148767.jpg">
+        <img class="reveal-photo" src="c207bac1-8684-4b1e-86dd-f14d1ea03a43.jpg">
+        <img class="reveal-photo" src="a240ea63-89e9-43dd-887c-4bdde55eb42b.jpg">
+    </div>
+
     <p>
-        आज तिमीले मेरो मन जित्यौ।<br><br>
-        यो सुरुवात मात्र हो।<br>
-        म तिमीलाई सधैं सम्मान, समय<br>
-        र साँचो माया दिने वाचा गर्छु।<br><br>
-        🌹
+        ठीक छ… अब सिधै सोध्छु 😄<br><br>
+        के तिमी मेरो साथमा<br>
+        अझै धेरै यस्ता रमाइला खेलहरू<br>
+        खेल्न चाहन्छौ?
     </p>
 
-    <button class="whatsapp" onclick="openWhatsApp()">
-        WhatsApp मा सन्देश पठाऊ 💬
-    </button>
+    <button class="yes" onclick="accepted()">हो 😊</button>
+    <button class="no" id="noBtn">होइन 😅</button>
 </div>
 
-<audio id="music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" type="audio/mpeg">
-</audio>
+
+<div id="end" class="hidden card">
+    <h2>🎉 YESSS! 🎉</h2>
+    <p>
+        अब यो खेल officially<br>
+        **Team Work Mode** मा गयो 😄❤️<br><br>
+        धन्यवाद रामिला 🌹
+    </p>
+</div>
 
 <script>
-let count=0, musicStarted=false;
 const hearts=document.querySelectorAll(".heart");
-const proposal=document.getElementById("proposal");
+const game1=document.getElementById("game1");
+const game2=document.getElementById("game2");
+const catchHeart=document.getElementById("catch");
+const quiz=document.getElementById("quiz");
 const final=document.getElementById("final");
-const typeText=document.getElementById("typeText");
-const music=document.getElementById("music");
+const end=document.getElementById("end");
+const noBtn=document.getElementById("noBtn");
 
-const message=`म तिमीलाई एउटा सानो खेल खेलाउन चाहन्थेँ,
-तर आज म आफ्नै मन तिमीसँग हार्न चाहन्छु।
-
-रामिला,
-तिमी मेरो जीवनमा
-बिना योजना आएको
-सबैभन्दा सुन्दर अनुभूति हौ।
-
-म तिमीलाई कुनै दबाब दिन चाहन्न,
-तर मनको गहिराइबाट एउटा प्रश्न सोध्न चाहन्छु।
-
-के तिमी मेरो जीवनको
-सबैभन्दा विशेष मान्छे बन्न चाहन्छौ?`;
+let count=0;
 
 hearts.forEach(h=>{
     h.onclick=()=>{
-        if(!musicStarted){music.play();musicStarted=true;}
         h.style.display="none";
         count++;
-        if(count===5){
-            proposal.style.display="block";
-            typeWriter(message);
+        if(count===3){
+            game1.style.display="none";
+            game2.classList.remove("hidden");
+            moveCatch();
         }
     }
 });
 
-function typeWriter(text){
-    let i=0;
-    typeText.innerHTML="";
-    const t=setInterval(()=>{
-        typeText.innerHTML+=text.charAt(i++);
-        if(i>=text.length)clearInterval(t);
-    },40);
+function moveCatch(){
+    catchHeart.style.left=Math.random()*80+"vw";
+    catchHeart.style.top=Math.random()*60+"vh";
 }
 
-function yesClicked(){
-    proposal.style.display="none";
-    final.style.display="block";
-    confetti();
+catchHeart.onclick=()=>{
+    game2.style.display="none";
+    quiz.classList.remove("hidden");
+};
+
+function wrong(){
+    alert("हाहा 😄 फेरि सोच!");
 }
 
-function smileClicked(){
-    alert("त्यो मुस्कान नै मेरो उत्तर हो 😄❤️");
+function right(){
+    quiz.style.display="none";
+    final.classList.remove("hidden");
+revealPhotos();
 }
 
-function confetti(){
-    for(let i=0;i<60;i++){
-        const c=document.createElement("div");
-        c.className="confetti";
-        c.innerHTML="🎉";
-        c.style.left=Math.random()*100+"vw";
-        c.style.animationDuration=(Math.random()*3+2)+"s";
-        document.body.appendChild(c);
-        setTimeout(()=>c.remove(),5000);
-    }
+noBtn.onmouseover=()=>{
+    noBtn.style.left=Math.random()*70+"vw";
+    noBtn.style.top=Math.random()*60+"vh";
+};
+
+function accepted(){
+    final.style.display="none";
+    end.classList.remove("hidden");
+}
+function revealPhotos(){
+    const photos=document.querySelectorAll(".reveal-photo");
+    photos.forEach((img,index)=>{
+        setTimeout(()=>{
+            img.classList.add("show");
+        }, index * 800);
+    });
 }
 
-function openWhatsApp(){
-    const text=encodeURIComponent("रामिला ❤️\nआज तिमीले मेरो मन जित्यौ।\nयो सुरुवात मात्र हो 🌹");
-    window.open("https://wa.me/?text="+text,"_blank");
-}
 </script>
 
 </body>
