--- a/index.html
+++ b/index.html
@@ -65,18 +65,17 @@ button{
 
 <body>
 
-<h1>❤️ रामिला, एउटा सानो खेल ❤️</h1>
+<h1>❤️ रामिला, ल सुरु गरम है त ❤️</h1>
 <p>पहिले सबै मुटु ट्याप गर 😄</p>
 
 <!-- MUSIC -->
 <div class="card">
-    <p>🎵 खेल खेल्दा गीत सुन्न चाहनुहुन्छ?</p>
+    <p>🎵 यो गीत तिम्रो लागि!</p>
     <iframe width="100%" height="80"
-        src="https://www.youtube.com/embed/m5nazfNU6hc?enablejsapi=1"
+        src="https://www.youtube.com/embed/m5nazfNU6hc?autoplay=1"
         frameborder="0"
         allow="autoplay; encrypted-media">
     </iframe>
-    <small>(Play ▶️ थिचेपछि खेल सुरु गर)</small>
 </div>
 
 <!-- GAME 1 -->
@@ -98,41 +97,42 @@ button{
 <!-- QUIZ -->
 <div id="quiz" class="hidden card">
     <h2>😜 सानो प्रश्न</h2>
-    <p>रामिलाको मुस्कान कस्तो हुन्छ?</p>
-    <button onclick="wrong()">सामान्य 🙂</button>
-    <button onclick="wrong()">ठीकठाक 😐</button>
-    <button onclick="right()">अत्यन्तै खतरनाक 😍</button>
+    <p id="quiz-question">रमिलालाई धेरै के मन पर्छ?</p>
+    <div id="quiz-options">
+        <button onclick="wrongAnswer()">KitKat 🙂</button>
+        <button onclick="wrongAnswer()">म:म  😐</button>
+        <button onclick="rightAnswer()">इस्कुश  😍</button>
+    </div>
 </div>
 
 <!-- FINAL -->
 <div id="final" class="hidden card">
-    <h2>रामिला ❤️</h2>
+    <h2 id="final-heading">रामिला ❤️</h2>
 
     <!-- PHOTO GALLERY -->
     <div style="display:flex;justify-content:center;flex-wrap:wrap;gap:10px;margin-bottom:15px;">
-        <img class="reveal-photo" src="a23e33dc-8a6f-4515-863b-23cd76148767.jpg">
-        <img class="reveal-photo" src="c207bac1-8684-4b1e-86dd-f14d1ea03a43.jpg">
-        <img class="reveal-photo" src="a240ea63-89e9-43dd-887c-4bdde55eb42b.jpg">
+        <img class="reveal-photo" src="https://raw.githubusercontent.com/rishav4198/Ramila/refs/heads/main/a23e33dc-8a6f-4515-863b-23cd76148767.jpg"> 
+        <img class="reveal-photo" src="https://raw.githubusercontent.com/rishav4198/Ramila/refs/heads/main/a240ea63-89e9-43dd-887c-4bdde55eb42b.jpg"> 
+        <img class="reveal-photo" src="https://raw.githubusercontent.com/rishav4198/Ramila/refs/heads/main/c207bac1-8684-4b1e-86dd-f14d1ea03a43.jpg"> 
     </div>
 
-    <p>
+    <p id="final-message">
         ठीक छ… अब सिधै सोध्छु 😄<br><br>
         के तिमी मेरो साथमा<br>
-        अझै धेरै यस्ता रमाइला खेलहरू<br>
-        खेल्न चाहन्छौ?
+        अझै यस्ता रमाइला खेलहरू<br>
+        खेल्न चाहन्छौ 😂😂😂?
     </p>
 
-    <button class="yes" onclick="accepted()">हो 😊</button>
-    <button class="no" id="noBtn">होइन 😅</button>
+    <button class="yes" onclick="accepted()">हुन्छ 😊</button>
+    <button class="no" id="noBtn">नाई 😅</button>
 </div>
 
 
 <div id="end" class="hidden card">
     <h2>🎉 YESSS! 🎉</h2>
     <p>
-        अब यो खेल officially<br>
-        **Team Work Mode** मा गयो 😄❤️<br><br>
-        धन्यवाद रामिला 🌹
+        Oh Shit !<br>
+        Now you are stuck 😄❤️<br><br>
     </p>
 </div>
 
@@ -145,8 +145,50 @@ const quiz=document.getElementById("quiz");
 const final=document.getElementById("final");
 const end=document.getElementById("end");
 const noBtn=document.getElementById("noBtn");
+const quizQuestion = document.getElementById("quiz-question");
+const quizOptions = document.getElementById("quiz-options");
+const finalHeading = document.getElementById("final-heading");
+const finalMessage = document.getElementById("final-message");
 
 let count=0;
+let quizAttempts = 0;
+
+const quizQuestions = [
+    {
+        question: "रामिलाको मुस्कान कस्तो हुन्छ?",
+        options: [
+            { text: "सामान्य 🙂", isCorrect: false },
+            { text: "ठीकठाक 😐", isCorrect: false },
+            { text: "अत्यन्तै खतरनाक 😍", isCorrect: true }
+        ]
+    },
+    {
+        question: "के तिमी मलाई मन पराउँछौ?",
+        options: [
+            { text: "अहँ, खासै होइन", isCorrect: false },
+            { text: "अलिअलि", isCorrect: false },
+            { text: "म तिमीलाई माया गर्छु! ❤️", isCorrect: true }
+        ]
+    },
+    {
+        question: "पक्का तिमी मलाई मन पराउँदैनौ?",
+        options: [
+            { text: "हो, म पक्का छु", isCorrect: false },
+            { text: "सय प्रतिशत पक्का", isCorrect: false },
+            { text: "किन नपराउनु, तिमी मेरो सबैभन्दा मिल्ने साथी हो!", isCorrect: true }
+        ]
+    },
+    {
+        question: "एक प्रतिशत पनि मलाई मन पर्दैन र?",
+        options: [
+            { text: "एक प्रतिशत", isCorrect: false },
+            { text: "पचास , हुनसक्छ", isCorrect: false },
+            { text: "सय प्रतिशत मन पर्छ!", isCorrect: true }
+        ]
+    }
+];
+
+let currentQuestionIndex = 0;
 
 hearts.forEach(h=>{
     h.onclick=()=>{
@@ -168,16 +210,50 @@ function moveCatch(){
 catchHeart.onclick=()=>{
     game2.style.display="none";
     quiz.classList.remove("hidden");
+    loadQuestion();
 };
 
-function wrong(){
-    alert("हाहा 😄 फेरि सोच!");
+function loadQuestion() {
+    const q = quizQuestions[currentQuestionIndex];
+    quizQuestion.textContent = q.question;
+    quizOptions.innerHTML = '';
+    q.options.forEach(option => {
+        const button = document.createElement('button');
+        button.textContent = option.text;
+        button.onclick = option.isCorrect ? rightAnswer : wrongAnswer;
+        quizOptions.appendChild(button);
+    });
 }
 
-function right(){
-    quiz.style.display="none";
-    final.classList.remove("hidden");
-revealPhotos();
+function wrongAnswer(){
+    quizAttempts++;
+    if (quizAttempts < quizQuestions.length * 2) { // Allow a few wrong answers before advancing
+        alert("हाहा 😄 होइन होला !");
+        // Optional: Shuffle options or change question if desired after a wrong answer
+        // loadQuestion();
+    } else {
+        // If she keeps getting it wrong, maybe it's time to move on or gently nudge.
+        currentQuestionIndex++;
+        if (currentQuestionIndex < quizQuestions.length) {
+            loadQuestion();
+        } else {
+            // All questions exhausted, advance to final stage
+            quiz.style.display="none";
+            final.classList.remove("hidden");
+            revealPhotos();
+        }
+    }
+}
+
+function rightAnswer(){
+    currentQuestionIndex++;
+    if (currentQuestionIndex < quizQuestions.length) {
+        loadQuestion();
+    } else {
+        quiz.style.display="none";
+        final.classList.remove("hidden");
+        revealPhotos();
+    }
 }
 
 noBtn.onmouseover=()=>{
