--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button{
 <body>
 
 <h1>❤️ रामिला, ल सुरु गरम है त ❤️</h1>
-<p>पहिले सबै मुटु ट्याप गर 😄</p>
+<p>पहिले एउटा मुटु रोज 😄</p>
 
 <!-- MUSIC -->
 <div class="card">
@@ -107,7 +107,7 @@ button{
 
 <!-- FINAL -->
 <div id="final" class="hidden card">
-    <h2 id="final-heading">रामिला ❤️</h2>
+    <h2 id="final-heading"> ❤️❤️❤️</h2>
 
     <!-- PHOTO GALLERY -->
     <div style="display:flex;justify-content:center;flex-wrap:wrap;gap:10px;margin-bottom:15px;">
@@ -278,3 +278,4 @@ function revealPhotos(){
 
 </body>
 </html>
+
