--- a/index.html
+++ b/index.html
@@ -118,15 +118,14 @@ button{
     </div>
     <p id="final-message">
         ठीक छ… अब सिधै सोध्छु 😄<br><br>
-        के तिमी मेरो साथमा अझै यस्ता रमाइला खेलहरू खेल्न चाहन्छौ? 😂
+        के तिमी म संग यो जिन्दगानी बिताउन चाहन्छौ ? 😂
     </p>
     <button class="yes" onclick="accepted()">हुन्छ 😊</button>
     <button class="no" id="noBtn">नाई 😅</button>
 </div>
 
 <div id="end" class="hidden card">
-    <h2>🎉 YESSS! 🎉</h2>
-    <p>Oh Shit !<br>Now you are stuck 😄❤️</p>
+    <h2>🎉 Now you are stuck with me 😄❤️🎉</h2>
 </div>
 
 <script>
@@ -203,6 +202,7 @@ const quizQuestions = [
             { text: "अत्यन्तै खतरनाक 😍", isCorrect: true }
         ]
     },
+
     {
         question: "के तिमी मलाई मन पराउँछौ?",
         options: [
@@ -211,6 +211,23 @@ const quizQuestions = [
             { text: "म तिमीलाई माया गर्छु! ❤️", isCorrect: true }
         ]
     }
+
+    question: "पक्का तिमी मलाई मन पराउँदैनौ?",
+        options: [
+            { text: "हो, म पक्का छु", isCorrect: false },
+            { text: "सय प्रतिशत पक्का", isCorrect: false },
+            { text: "किन नपराउनु, तिमी मेरो सबैभन्दा मिल्ने साथी हो!", isCorrect: true }
+        ]
+    },
+    {
+        question: "शून्य प्रतिशत पनि मलाई मन पर्दैन र?",
+        options: [
+            { text: "शून्य प्रतिशत", isCorrect: false },
+            { text: "उम, हुनसक्छ", isCorrect: false },
+            { text: "सय प्रतिशत मन पर्छ!", isCorrect: true }
+        ]
+    }
+];
 ];
 
 function loadQuestion() {
@@ -271,3 +288,4 @@ function revealPhotos(){
 
 </body>
 </html>
+
