--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ button{
 
 <div id="game2" class="hidden">
     <div class="card">
-        <h2>😄 अब मेरो मुटु समात त!</h2>
+        <h2>😄 अब मेरो मुटु समात ल !</h2>
     </div>
     <div id="catch">❤️</div>
 </div>
 
 <div id="quiz" class="hidden card">
-    <h2>😜 सानो प्रश्न</h2>
+    <h2>😜</h2>
     <p id="quiz-question">लोड हुँदैछ...</p>
     <div id="quiz-options" style="min-height: 150px; position: relative;"></div>
 </div>
@@ -201,7 +201,7 @@ const quizQuestions = [
         ]
     },
     {
-        question: "रामिलाको मुस्कान कस्तो हुन्छ?",
+        question: "रामिलाको मुस्कान कस्तो छ?",
         options: [
             { text: "सामान्य 🙂", isCorrect: false },
             { text: "ठीकठाक 😐", isCorrect: false },
@@ -209,29 +209,38 @@ const quizQuestions = [
         ]
     },
     {
+        question: "रमिला कतिको नाटक गर्छ ?",
+        options: [
+            { text: "गर्दिन एकदम राम्रो छु म", isCorrect: false },
+            { text: "अलिअलि", isCorrect: false },
+            { text: "एकदमै  धेरै", isCorrect: true }
+        ]
+    },
+    {
         question: "के तिमी मलाई मन पराउँछौ?",
         options: [
-            { text: "अहँ, खासै होइन", isCorrect: false },
-            { text: "अलिअलि", isCorrect: false },
-            { text: "म तिमीलाई माया गर्छु! ❤️", isCorrect: true }
+            { text: "अह गर्दिन नाटक गरेक", isCorrect: false },
+            { text: "हल्का", isCorrect: false },
+            { text: "अ थोरै गर्छु ", isCorrect: true }
         ]
     },
-    {
-        question: "पक्का तिमी मलाई मन पराउँदैनौ?",
-        options: [
-            { text: "हो, म पक्का छु", isCorrect: false },
-            { text: "सय प्रतिशत पक्का", isCorrect: false },
-            { text: "किन नपराउनु, तिमी मेरो साथी मात्रै हौ र!", isCorrect: true }
-        ]
-    },
-    {
-        question: "शून्य प्रतिशत पनि मलाई मन पर्दैन र?",
+    
+        question: "कति प्रतिशत मन पर्छ?",
         options: [
             { text: "शून्य प्रतिशत", isCorrect: false },
-            { text: "उम, हुनसक्छ", isCorrect: false },
+            { text: "आलु प्रतिशत", isCorrect: false },
             { text: "सय प्रतिशत मन पर्छ!", isCorrect: true }
         ]
     }
+    {
+        question: "पक्का होनी ?",
+        options: [
+            { text: "होइन झुटो बोलेको", isCorrect: false },
+            { text: "मक्ख मात्र बनाईदेको ", isCorrect: false },
+            { text: "किन नपराउनु, तिमी त मेरो मुटु हौ नि 😘", isCorrect: true }
+        ]
+    },
+    {
 ];
 
 function loadQuestion() {
@@ -291,3 +300,4 @@ function revealPhotos(){
 
 </body>
 </html>
+
