--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ button{
 <div id="special-popup" class="hidden">
     <img id="popup-pic" src="" style="width:220px; border-radius:15px; height: 280px; object-fit: cover;">
     <h3 id="popup-text" style="color:#ff4d6d"></h3>
-    <button class="yes" onclick="closePopup()">अघि बढौ 😄</button>
+    <button class="yes" onclick="closePopup()">ल अर्को 😄</button>
 </div>
 
 <div id="game1">
@@ -219,7 +219,7 @@ const quizQuestions = [
         options: [
             { text: "KitKat 🙂", isCorrect: false },
             { text: "म:म 😐", isCorrect: false },
-            { text: "इस्कुश 😍", isCorrect: true, isSpecial: true, pic: "PASTE_YOUR_ISQUSH_PIC_HERE", msg: "ल लाऊ खाऊ 🤣" }
+            { text: "इस्कुश 😍", isCorrect: true, isSpecial: true, pic: "https://raw.githubusercontent.com/rishav4198/Ramila/refs/heads/main/images.jpg", msg: "ल लाऊ खाऊ 🤣" }
         ]
     },
     {
@@ -227,7 +227,7 @@ const quizQuestions = [
         options: [
             { text: "सामान्य 🙂", isCorrect: false },
             { text: "ठीकठाक 😐", isCorrect: false },
-            { text: "अत्यन्तै खतरनाक 😍", isCorrect: true, isSpecial: true, pic: "PASTE_YOUR_SMILE_PIC_HERE", msg: "खतरनाक हैन यस्तो राम्रो चै होला 😘😘😘" }
+            { text: "अत्यन्तै खतरनाक 😍", isCorrect: true, isSpecial: true, pic: "https://raw.githubusercontent.com/rishav4198/Ramila/refs/heads/main/smile.jpg", msg: "खतरनाक हैन यस्तो राम्रो चै होला 😘😘😘" }
         ]
     },
     {
@@ -334,3 +334,4 @@ function revealPhotos(){
 
 </body>
 </html>
+
