--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@ const quizQuestions = [
             { text: "अ थोरै गर्छु ", isCorrect: true }
         ]
     },
+        {
+        question: "नाटक होकी साँची हो?",
+        options: [
+            { text: "नाटक हो ", isCorrect: false },
+            { text: "गफ हो", isCorrect: false },
+            { text: "साँची 😊 ", isCorrect: true }
+        ]
+    },
     {
         question: "कति प्रतिशत मन पर्छ?",
         options: [
@@ -337,4 +345,5 @@ function revealPhotos(){
 
 </body>
 </html>
+
 
